--- https://github.com/vadonka/lge-kernel-kang/blob/93969b848dace43fc5fcad3280a0f5e617f443a3/include/linux/oom.h
--- https://github.com/vadonka/lge-kernel-kang/blob/93969b848dace43fc5fcad3280a0f5e617f443a3/mm/oom_kill.c
-- https://github.com/vadonka/lge-kernel-kang/commit/c2d75a4c5dd057fb5d28f92c733fee644e028d96
-- https://github.com/vadonka/lge-kernel-kang/commit/5e5e010ecedc83cd0397efda0d123e26cb6ca0a0
- remove useless dump_stack() from binder.c
- port some Linux 3.4 changes
-- lib/cpumask.c: remove __any_online_cpu()
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=38b93780a5381961ad92d24ab9a12a964189a3a4
-- ARM: tlb: move noMMU tlb_flush() to asm/tlb.h
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=58e9c47fa0dd76693b2c85c010c7430a4de77c6d

- optimizing buildflags, adapting kernel config to build with gcc 4.7.1
-- keep compiling with 4.6.1, wireless.ko seems not working with 4.7.1

TODO:
- make kernel modules work with gcc 4.7.1
-- or build modules with 4.6.1 ?
- cherrypicking from vadonka
-- https://github.com/vadonka/lge-kernel-kang/commit/6f334518cf4f42f45dd243ac29c0d7d1ed0a3da0
-- https://github.com/vadonka/lge-kernel-kang/commit/d8800bb869ab7f0ca2df165d8e000cdaee2f3765
-- https://github.com/vadonka/lge-kernel-kang/commit/de29f457c300a4e327bdfab5c3ac6df5b7f679fa
-- https://github.com/vadonka/lge-kernel-kang/commit/88f6071333255e0f778616dbe8acb22d74636ea2
- update Fake_shmoo OC code
-- don't forget to analyze & merge spica OTF code


- minimize compiled size of kernel and modules
- update BCM4329 to latest version findable
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=blob_plain;f=drivers/net/wireless/bcmdhd/wl_iw.c;hb=6de21231e558a85d766e7d821a6542c5c1803aa8 ?
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git&a=search&h=refs%2Fheads%2Fandroid-tegra-nv-3.1&st=commit&s=bcm ?

- merge P999 21y changes

